<resources>
    <string name="facebook">Facebook</string>
    <string name="spnoti">Diario PrimeroChaco</string>
    <string name="primeralinea">Diario Primera Linea</string>
    <string name="norte">Diario Data Chaco</string>
    <string name="diariolaregionn">El Diario de la Región</string>
    <string name="mapa">Limpiar Mapa</string>
    <string name="mural">Mural de la ciudad</string>
    <string name="plaza">Plaza Ensanche Sur</string>
    <string name="catedral">Catedral de la ciudad</string>
    <string name="zoo">Zoológico de la ciudad</string>
    <string name="termal">Complejo Termal de la ciudad</string>
    <string name="fiesta">Fiesta Nacional del Algodón</string>
    <string name="aero">Aeropuerto de la ciudad</string>
    <string name="band">Bandera de la ciudad</string>
    <string name="pasarela1">Pasarela (Estación de Tren)</string>
    <string name="pasarela2">Estación de Tren (Vista desde Pasarela)</string>
    <string name="pasarela3">Estación de Tren (Vista Frente)</string>
    <string name="descripcionsobreciu1">"Presidencia Roque Sáenz Peña o simplemente Sáenz Peña es la segunda ciudad más poblada de la provincia del Chaco, Argentina. Es la cabecera del departamento Comandante Fernández. En la provincia suele llamarse como La Termal, por las aguas termales que constituyen uno de sus principales atractivos turísticos. En el año 2010 contaba con 89 882 habitantes. Sus coordenadas geográficas son 26º 47' 27 S, 60º 26 29' O, a una altitud de 90,00 metros sobre el nivel del mar y a 168 kilómetros de la capital de provincia, Resistencia."</string>
    <string name="descripcionsobreciu2">"Sáenz Peña se encuentra atravesada por las rutas nacionales 16 y 95, ambas pavimentadas, convirtiéndose en un centro estatrégico por su cercanía a gran parte de las poblaciones chaqueñas. La ruta 16 es la más importante, comunicándola al sudeste con Quitilipi y Resistencia. Al noroeste la enlaza con Aviá Teraí y la Provincia de Salta. La ruta 95 la vincula al norte con Tres Isletas y la Provincia de Formosa, y al sur con Villa Ángela y la Provincia de Santa Fe."</string>
    <string name="tituboli">Locales Bailables</string>
    <string name="titupub">Bares y Pubs</string>
    <string name="boli1">Complejo Fausto</string>
    <string name="boli2">Password Disco</string>
    <string name="boli4">Complejo Zoha NightLife</string>
    <string name="facebook2">Zoha NightLife</string>
    <string name="boli5">X-Treme Disco</string>
    <string name="facebook3">X-Treme Disco</string>
    <string name="pub1">Fausto Resto Bar</string>
    <string name="pub3">Manolo Bar</string>
    <string name="pub5">ManoSanta Bar</string>
    <string name="facebook7">ManoSanta Bar</string>
    <string name="pub7">Chino Bar</string>
    <string name="pub8">Mü Bar</string>
    <string name="share"></string>
    <string name="estacion">Estaciones de Servicio</string>
    <string name="desestacion">Información de estaciones de servicio en la ciudad</string>
    <string name="tituservis1">Axion Energy</string>
    <string name="direservis1">Belgrano 802</string>
    <string name="tituservis2">Esso Cooperativa Agrop.</string>
    <string name="direservis2">Sargento Cabral 2</string>
    <string name="tituservis3">Shell Mecanagro Chaco SACIF</string>
    <string name="direservis3">Moreno 399</string>
    <string name="tituservis4">Shell Petrolera Sáenz Peña SC</string>
    <string name="direservis4">Ruta 16 y calle 116</string>
    <string name="tituservis5">YPF Sáenz Peña Combustibles SA</string>
    <string name="direservis5">Belgrano y Chacabuco</string>
    <string name="tituservis6">YPF Automóvil Club Argentino</string>
    <string name="direservis6">Rivadavia y 25 de Mayo</string>
    <string name="tituservis7">YPF Sáenz Peña Center SA</string>
    <string name="direservis7">Comandante Fernández y Ucrania</string>
    <string name="tituservis8">YPF El Cruce SRL</string>
    <string name="direservis8">Ruta 16 y Ruta 95</string>
    <string name="tituservis9">Petrogar SRL</string>
    <string name="direservis9">John F. Kennedy S/N</string>
    <string name="tituservis10">Petrobras Fibras SRL</string>
    <string name="direservis10">Ruta 16 km 175,2</string>
    <string name="tituagen1">Turismo Mania</string>
    <string name="direagen1">Laprida 530</string>
    <string name="teleagen1">+549-(364)-4427112</string>
    <string name="agencontacto1">ventas1_turismomania@hotmail.com</string>
    <string name="tituagen2">Soleado Turismo</string>
    <string name="direagen2">Mariano Moreno 350</string>
    <string name="teleagen2">+549-(364)-4420938</string>
    <string name="agencontacto2">soleado@arnetbiz.com.ar\nventassoleado@arnetbiz.com.ar\nhttps://es-la.facebook.com/soleado.turismo</string>
    <string name="tituagen3">Talento Empresa de Viajes y Turismo</string>
    <string name="direagen3">Chacabuco 521</string>
    <string name="teleagen3">+549-(364)-4430270 / +549-(364)-4436775</string>
    <string name="agencontacto3">talentoevt@hotmail.com.ar\nwww.talentoevt.com\nhttps://www.facebook.com/talento.evt</string>
    <string name="tituagen4">Tobas Tour</string>
    <string name="direagen4">Superiora Palmira 565</string>
    <string name="teleagen4">+549-(364)-4423105</string>
    <string name="agencontacto4">tobastour@hotmail.com\nhttp://www.tobastour.com.ar\nhttps://es-es.facebook.com/tobastourevt</string>
    <string name="tituagen5">Gal-Tur</string>
    <string name="direagen5">25 de Mayo 414</string>
    <string name="teleagen5">+549-(364)-4422100</string>
    <string name="agencontacto5">galtur@arnet.com.ar</string>
    <string name="tituagen6">Turysol</string>
    <string name="direagen6">Belgrano 666</string>
    <string name="teleagen6">+549-(364)-4433430</string>
    <string name="agencontacto6">https://www.facebook.com/turysolviajes</string>
    <string name="tituagen7">Roldan Viajes</string>
    <string name="direagen7">Mitre 363</string>
    <string name="teleagen7">+549-(364)-4420370</string>
    <string name="agencontacto7">roldanviajes@gmail.com</string>
    <string name="tituagen8">Gabriela Pistek Empresa de Viajes y Turismo</string>
    <string name="direagen8">Mariano Moreno 827</string>
    <string name="teleagen8">+549-(364)-4436761</string>
    <string name="agencontacto8">gabrielapistekevt@gmail.com</string>
    <string name="tituagen9">Walus Viajes</string>
    <string name="direagen9">Mariano Moreno 1049</string>
    <string name="teleagen9">+549-(364)-4424278</string>
    <string name="tituresto1">El Patio</string>
    <string name="direresto1">Belgrano 909</string>
    <string name="teleresto1">+549-(364)-4431777</string>
    <string name="tituresto2">Sarava</string>
    <string name="direresto2">San Martin 496</string>
    <string name="teleresto2">+549-(364)-44244969</string>
    <string name="tituresto3">Restaurante Hotel Atrium Gualok</string>
    <string name="direresto3">San Martin 1198</string>
    <string name="teleresto3">+549-(364)-4420500</string>
    <string name="tituresto4">Raíces Parrilla-Comedor</string>
    <string name="direresto4">Blas Parera 560</string>
    <string name="teleresto4">+549-(364)-4424168</string>
    <string name="tituresto5">Pizzería Palmita</string>
    <string name="direresto5">López y Planes 500</string>
    <string name="teleresto5">+549-(364)-4373779</string>
    <string name="tituresto6">Bien José</string>
    <string name="direresto6">25 de Mayo 530</string>
    <string name="teleresto6">+549-(364)-4431725</string>
    <string name="tituresto7">Pido Pizza</string>
    <string name="direresto7">Mariano Moreno 1100</string>
    <string name="teleresto7">+549-(364)-4464488</string>
    <string name="tituresto8">Mega Bar</string>
    <string name="direresto8">Azcuénaga (Sobre Paso a Nivel)</string>
    <string name="teleresto8">+549-(364)-4420102</string>
    <string name="tituresto9">Pamper´s King</string>
    <string name="direresto9">Belgrano 440</string>
    <string name="teleresto9">+549-(364)-4421992</string>
    <string name="tituresto10">Parrilla El Chucaro</string>
    <string name="direresto10">John F. Kennedy 3</string>
    <string name="teleresto10">+549-(364)-4578175</string>
    <string name="tituresto11">El Patio del Cantor</string>
    <string name="direresto11">Cte. Fernández 60</string>
    <string name="teleresto11">+549-(364)-4407678</string>
    <string name="tituresto12">Pizzeria y Resto Giuseppe</string>
    <string name="direresto12">Mariano Moreno 130</string>
    <string name="teleresto12">+549-(364)-4425467</string>
    <string name="tituresto13">La Esquina Chopería y Pizzería</string>
    <string name="direresto13">Mariano Moreno 1091</string>
    <string name="teleresto13">+549-(364)-4588129</string>
    <string name="tituresto14">Carmen</string>
    <string name="direresto14">Pueyrredón 365</string>
    <string name="teleresto14">+549-(364)-4631989 / +549-(364)-4436747</string>
    <string name="tituresto15">Parrilla y Comedor El Decano</string>
    <string name="direresto15">Blas Parera 499</string>
    <string name="tituresto16">Parrilla y Comedor Shaday</string>
    <string name="direresto16">Almirante Brown 499</string>
    <string name="teleresto16">+549-(364)-4431548</string>
    <string name="tituresto17">Grill-Pizzería-Sandwichería La Casona</string>
    <string name="direresto17">Belgrano 1399</string>
    <string name="teleresto17">+549-(364)-4432000</string>
    <string name="tituresto18">Pizzería y Sandwichería Cacho</string>
    <string name="direresto18">Laprida 521</string>
    <string name="teleresto18">+549-(364)-4387096</string>
    <string name="tituresto19">Fausto Resto Bar</string>
    <string name="direresto19">Mitre 558</string>
    <string name="tituresto20">Roque House</string>
    <string name="direresto20">Mitre 760</string>
    <string name="teleresto20">+549-(364)-4431765</string>
    <string name="tituresto21">Pizzeria La Rocola</string>
    <string name="direresto21">Mariano Moreno 202</string>
    <string name="teleresto21">+549-(3735)-621595</string>
    <string name="tituresto23">1985 Tap Room</string>
    <string name="titups2">Alquiler de Auto</string>
    <string name="descripps">Alquiler de autos por día.\nViaje con nuestras unidades por todo el país.\nContamos con GPS y sillas para niños.\nRealice alquiler para eventos especiales, viajes familiares o laborales.</string>
    <string name="face1">facebook.com/pands.solucionessobreruedas</string>
    <string name="face">Facebook:</string>
    <string name="emailps">pssolucionessobreruedas@gmail.com</string>
    <string name="teleps">+549-(364)-4590444</string>
    <string name="direps">Alejandro Aguado N°260 Barrio San Martin</string>
    <string name="titups1">PyS Rent a Car</string>
    <string name="Titulo4">Contacto</string>
    <string name="Titulo9">Restaurantes</string>
    <string name="Titulo12">Lugares para visitar</string>
    <string name="Titulo14">Remisses</string>
    <string name="Titulo20">Cajeros</string>
    <string name="Destinatario">Para</string>
    <string name="micorreo">latermaldaapp@gmail.com</string>
    <string name="Asunto">Asunto</string>
    <string name="Mensaje">Mensaje</string>
    <string name="Enviar">Enviar</string>
    <string name="Hot">Hoteles</string>
    <string name="Casi">Casinos</string>
    <string name="Hosp">Hospital y Clínicas</string>
    <string name="direccion">Dirección:\t</string>
    <string name="telefono">Teléfono:\t</string>
    <string name="contacto">Contacto:\t</string>
    <string name="como">Como Llegar:\t</string>
    <string name="ver"><u>Ver Mapa</u></string>
    <string name="des1">Reseña</string>
    <string name="des2">Números de Emergencias</string>
    <string name="des4">Como Llegar</string>
    <string name="des5">Datos Utiles</string>
    <string name="des6">Que ver</string>
    <string name="asunto">Asunto</string>
    <string name="mensaje">Mensaje</string>
    <string name="bares">Pubs y Bares</string>
</resources>