<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.roycho.latermaldadentro.MenuPrincipal">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/CollapsingToolbar"
            android:layout_height="180dp"
            android:layout_width="match_parent"
            app:layout_scrollFlags = "scroll|enterAlways|enterAlwaysCollapsed"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleTextAppearance="?android:attr/textAppearanceLarge"
            app:expandedTitleMarginBottom="30dp"
            app:expandedTitleMarginStart="4dp"
            app:expandedTitleMarginEnd="150dp"
            android:background="@drawable/cuatro"
            app:title="@string/titups2">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarid"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"/>

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="end"
                android:background="@drawable/alquilerauto"
                android:layout_marginTop="40sp">
            </ImageView>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableRow
                android:id="@+id/fila1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/direccion1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/direccion" />

                <TextView
                    android:id="@+id/direccion2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/direps" />
            </TableRow>

            <TableRow
                android:id="@+id/fila2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tele1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telefono" />

                <TextView
                    android:id="@+id/tele2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="all"
                    android:linksClickable="true"
                    android:text="@string/teleps" />
            </TableRow>

            <TableRow
                android:id="@+id/fila5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/contacto4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contacto" />

                <TextView
                    android:id="@+id/contacto5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="email"
                    android:text="@string/emailps" />

            </TableRow>

            <TableRow
                android:id="@+id/fila3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/contacto1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/face" />

                <TextView
                    android:id="@+id/contacto2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:text="@string/face1" />

            </TableRow>


            <TableRow
                android:id="@+id/fila4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/como1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/como"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/como2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="all"
                    android:linksClickable="true"
                    android:paddingBottom="15dp"
                    android:text="@string/ver"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#00CCCC" />

            </TableRow>

            <TextView
                android:id="@+id/casino1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titups1"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/descripps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingBottom="15dp"
                android:text="@string/descripps"
                android:textAppearance="?android:attr/textAppearanceSmall" />



            <com.google.android.gms.ads.AdView
                android:id="@+id/adView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:adSize="BANNER"
                app:adUnitId="ca-app-pub-8540442919500654/8650283810">

            </com.google.android.gms.ads.AdView>

        </LinearLayout>



    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
