<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.roycho.latermaldadentro.MenuPrincipal">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/CollapsingToolbar"
            android:layout_height="180dp"
            android:layout_width="match_parent"
            app:layout_scrollFlags = "scroll|enterAlways|enterAlwaysCollapsed"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleTextAppearance="?android:attr/textAppearanceLarge"
            app:expandedTitleMarginBottom="30dp"
            app:expandedTitleMarginStart="4dp"
            app:expandedTitleMarginEnd="150dp"
            android:background="@drawable/cuatro"
            app:title="@string/Titulo4">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarid"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"/>

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="end"
                android:background="@drawable/email"
                android:layout_marginTop="40sp">

            </ImageView>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">



    <LinearLayout android:id="@+id/LinearLayout01"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">
              
              
    <LinearLayout android:id="@+id/LinearLayout02"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">

        <TextView
            android:id="@+id/txtForEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Destinatario"
            android:textStyle="bold" >

</TextView>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textVisiblePassword"
            android:hint="@string/micorreo"
            android:maxLength="0"
            android:text="@string/micorreo"
            android:width="170dip" >

        </EditText>
    </LinearLayout>
    <LinearLayout android:id="@+id/LinearLayout03"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">

        <TextView
            android:id="@+id/txtForSubject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Asunto"
            android:textStyle="bold" >

</TextView>

        <EditText
            android:id="@+id/etSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:width="170dip"
            android:hint="@string/asunto"
            android:textColor="#000">

        </EditText>
    </LinearLayout>
    <LinearLayout android:id="@+id/LinearLayout04"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">

        <TextView
            android:id="@+id/txtForBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Mensaje"
            android:textStyle="bold" >

</TextView>

        <EditText
            android:id="@+id/etBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|top"
            android:textColor="#000"
            android:lines="5"
            android:width="300dip"
            android:hint="@string/mensaje" >

        </EditText>
    </LinearLayout>

     <Button
         android:id="@+id/btnSend"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/Enviar"
         android:textColor="#FFFFFF"
         android:textStyle="bold"
         android:width="150dip" >

    </Button>
</LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>